k3s-manifests/services/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        image: sctx/overseerr:latest
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: "/app/config"
          name: configs-storage
      volumes:
      - name: configs-storage
        persistentVolumeClaim:
          claimName: k3s-configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  selector:
    app: overseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: ClusterIP
