k3s-manifests/services/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:develop
        ports:
        - containerPort: 9696
        volumeMounts:
        - mountPath: "/config"
          name: configs-storage
      volumes:
      - name: configs-storage
        persistentVolumeClaim:
          claimName: k3s-configs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
  type: ClusterIP
